      setting to Fill Parent -- not recommended) [Ralph]
    * Camera is now focused by default on hero walkabout container instead of
      sprite (see "Camera following a hero/NPC centers on" setting) to fix
      glitches when using camera script commands with large walkabouts [Ralph]
    * Can import .wav files as music

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]
    * In the textbox editor, pressing Ctrl+Left/Right to link to another box
      appeared to work but actually the "After" tag condition may not have
      gotten set to "Always", although it appeared it was. If you have any
      secretly-wrong textbox chains in your game you will be warned when you
      open it in Custom so you can fix them. (The in-game F1 textbox debug
      screen also showed "ALWAYS" instead of "NEVER"!) [Ralph]
    * Fixed "delete_ScriptData" error when quitting after having stopped
      a script in the script debugger [Ralph]
    * "hero z" could incorrectly throw "invalid party slot" errors, but
      its argument is actually party caterpillar rank [Ralph]
    * "hero is walking", "npc is walking" didn't consider pathfinding [James]
    * The width of a Text slice didn't update after changing the text in the
      slice editor [Ralph]
    * Bad results if "scroll to child" was called twice in a row, or after the
      slice tree was modified, without a "wait" in-between [Ralph]
    * Fixed exporting a blank BMP file instead of a tileset or backdrop
      when you browse to pick a different export location other than
      the default. [James]
    * Reimporting scripts by pressing F9 in the tileset editor would wipe
      the tileset [James]
    * Fix a crash that happened when you used ellipse-related scripting