@@ -176,6 +176,7 @@ April ? 2019 [Fufluns]
       sprite (see "Camera following a hero/NPC centers on" setting) to fix
       glitches when using camera script commands with large walkabouts [Ralph]
     * Can import .wav files as music
+    * You can activate NPCs while holding down an arrow key [Ralph]
 
   * Bugfixes
     * Fix a major memory leak while recording .gifs [Ralph]
